syntax = "proto3";

option go_package = "go/product";

import "validate/validate.proto";

enum OrderDirection {
  ASC = 0;
  DESC = 1;
}

message Product {
  int64 id = 1;
  string name = 2;
}

message IDRequest {
  int64 id = 1;  
}

message CreateProductRequest {
  string name = 1 [(validate.rules).string = {
    pattern:   "^[^[0-9]A-Za-z]+( [^[0-9]A-Za-z]+)*$",
    max_bytes: 256,
 }];
 }

message UpdateProductRequest {
  int64 id = 1;
  string name = 2;
 }

message ListProductsResponse {
  repeated Product products = 1;
  int64 total_count = 2;
}

enum ListProductRequestOrderField {
  NONE = 0;
  NAME = 1;
}

message ListProductsRequestOrder {
  ListProductRequestOrderField field = 1;
  OrderDirection direction = 2;
}

message ListProductsRequestFilter {
  string name_like = 1; // optional |  [(gogoproto.nullable) = true]
}

message ListProductsRequest {
  int64 limit = 1;
  int64 offset = 2; // optional
  ListProductsRequestOrder order_by = 3; // optional
  ListProductsRequestFilter filter = 4; // optional
}

message DeleteProductsResponse {
}


 service ProductsService {
  rpc GetProduct(IDRequest) returns (Product) {}
  rpc GetProducts(ListProductsRequest) returns (ListProductsResponse) {}
  rpc CreateProduct(CreateProductRequest) returns (Product) {}
  rpc UpdateProduct(UpdateProductRequest) returns (Product) {}
  rpc DeleteProduct(IDRequest) returns (DeleteProductsResponse) {}
 }
 